Bug 83311 - new read-only info bar does not go away when clicking on "edit"
Summary: new read-only info bar does not go away when clicking on "edit"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-31 20:05 UTC by Lionel Elie Mamane
Modified: 2014-09-01 06:11 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Base (embedded writer document) reproduction case (10.37 KB, application/vnd.sun.xml.base)
2014-08-31 20:05 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2014-08-31 20:05:45 UTC
Created attachment 105504 [details]
Base (embedded writer document) reproduction case

When opening a stand-alone Writer document that has the property "open in read-only mode" set, the new read-only info bar does not go away after one clicks "edit". However, if one clicks "edit" again, the document goes back to read-only mode. If one clicks "edit" a third time, the infobar disappears.

In the case of a writer document embedded in Base (which Base calls "form"), the info bar never goes away. Here are the reproductions steps for this case:

1) Open attachment
2) In left pane, click "Forms"
3) Right-click on "Formulaire1" and click on "edit"
4) Document opens (in design mode). Click "Edit" in info bar.
5) Click edit several times. The info bar never goes away.
Comment 1 Samuel Mehrbrodt 2014-08-31 20:17:38 UTC
I'll have a look at this, thanks for reporting.
Comment 2 Samuel Mehrbrodt 2014-08-31 20:39:26 UTC
(In reply to comment #0)
> 
> When opening a stand-alone Writer document that has the property "open in
> read-only mode" set, the new read-only info bar does not go away after one
> clicks "edit". However, if one clicks "edit" again, the document goes back
> to read-only mode. If one clicks "edit" a third time, the infobar disappears.

Fix is here: https://gerrit.libreoffice.org/11220
> 
> In the case of a writer document embedded in Base (which Base calls "form"),
> the info bar never goes away. Here are the reproductions steps for this case:
> 
> 1) Open attachment
> 2 [details] [review]) In left pane, click "Forms"
> 3) Right-click on "Formulaire1" and click on "edit"
> 4) Document opens (in design mode). Click "Edit" in info bar.
> 5) Click edit several times. The info bar never goes away.

Is this fixed with your patch for bug #83302?
If the infobar doesn't show up, I don't need to close it...
Comment 3 Lionel Elie Mamane 2014-09-01 04:41:05 UTC
(In reply to comment #2)
> (In reply to comment #0)

>> In the case of a writer document embedded in Base (which Base calls "form"),
>> the info bar never goes away. Here are the reproductions steps for this case:

>> 1) Open attachment 105504 [details]
>> 2) In left pane, click "Forms"
>> 3) Right-click on "Formulaire1" and click on "edit"
>> 4) Document opens (in design mode). Click "Edit" in info bar.
>> 5) Click edit several times. The info bar never goes away.

> Is this fixed with your patch for bug #83302?
> If the infobar doesn't show up, I don't need to close it...

No. The infobar (with my patch for bug 83302) doesn't show up when the form is opened in normal mode (that is double-click on it, or right-click / open). It *does* show up (and this is desirable) when the form is opened in design mode (right-lick on it and "edit" in the pop-up / contextual menu).
Comment 4 Lionel Elie Mamane 2014-09-01 06:09:26 UTC
(In reply to comment #3)
> (In reply to comment #2)
>> (In reply to comment #0)

>>> In the case of a writer document embedded in Base (which Base calls "form"),
>>> the info bar never goes away.

>> Is this fixed with your patch for bug #83302?
>> If the infobar doesn't show up, I don't need to close it...

> No. The infobar (with my patch for bug 83302) doesn't show up when the form
> is opened in normal mode (that is double-click on it, or right-click /
> open). It *does* show up (and this is desirable) when the form is opened in
> design mode (right-lick on it and "edit" in the pop-up / contextual menu).

It seems to be fixed by your patch to this bug, though.
Comment 5 Commit Notification 2014-09-01 06:11:45 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8cf89c24906c6d50a3c15f1ebef4df071ad6ec79

fdo#83311 Fix infobar for documents with read-only property



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.