fdo#83311 Fix infobar for documents with read-only property

Change-Id: Ic813ab3eb74a088b60b4dc3dcd56e7b19683190c
Reviewed-on: https://gerrit.libreoffice.org/11220
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>